# rust-wheels

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: bin.rs  lib.rs
src/benchmarks/: mod.rs
src/demos/number_utils/: integer_utils_demos.rs
src/demos/prim_utils/: integer_utils_demos.rs
src/io/: readers.rs
src/iterators/: adaptors.rs  bools.rs  chars.rs  common.rs  dependent_pairs.rs  floats.rs  general.rs  integers.rs  integers_geometric.rs  iterator_provider.rs  lists.rs  naturals.rs  options.rs  orderings.rs  primitive_floats.rs  primitive_ints.rs  rounding_modes.rs  strings.rs  tuples.rs  vecs.rs
src/number_utils/: integer_utils.rs
src/prim_utils/: char_utils.rs  float_utils.rs  integer_utils.rs  primitive_float_utils.rs  primitive_int_utils.rs  string_utils.rs  traits.rs
tests/: common.rs  lib.rs
tests/data/: test-output.txt
tests/iterators/: bools.rs  chars.rs  floats.rs  general.rs  integers.rs  integers_geometric.rs  iterator_provider_tests.rs  naturals.rs  orderings.rs  primitive_floats.rs  primitive_ints.rs  rounding_modes.rs
tests/number_utils/: integer_utils_tests.rs
tests/prim_utils/: integer_utils.rs  integer_utils_tests.rs  primitive_int_utils.rs
