[package]
name = "rust-wheels"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "rust_wheels"
path = "src/lib.rs"

[dependencies]
gnuplot = "0.0.22"
malachite-nz = { path = "../malachite/malachite-nz" }
malachite-base = { path = "../malachite/malachite-base" }
itertools = "0.5.9"
rand = "0.3.0"
sha3 = "0.4.1"
streaming-stats = "0.1"
time = "0.1"
