[package]
name = "rust-wheels"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "rust_wheels"
path = "src/lib.rs"

[features]

default = ["32_bit_limbs"]

32_bit_limbs = ["malachite-nz/32_bit_limbs"]
64_bit_limbs = ["malachite-nz/64_bit_limbs"]

[dependencies]
gnuplot = "0.0.26"
malachite-nz = { path = "../malachite/malachite-nz", default-features = false }
malachite-base = { path = "../malachite/malachite-base" }
itertools = "0.7.8"
rand = "0.3.0"
sha3 = "0.8.0"
streaming-stats = "0.2.2"
time = "0.1.40"

[profile.release]
lto = true
