[package]
name = "rust-wheels"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "rust_wheels"
path = "src/lib.rs"

[features]
32_bit_limbs = ["malachite-nz/32_bit_limbs"]

[dependencies]
malachite-nz = { path = "../malachite/malachite-nz", default-features = false }
malachite-base = { path = "../malachite/malachite-base" }
rand = "0.4.6"
sha3 = "0.9.0"

[profile.release]
lto = true
